<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".jasonPresent2">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="993dp"
        android:text="@string/button"
        tools:ignore="MissingConstraints,VisualLintButtonSize,VisualLintBounds"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="2193dp"
        android:onClick="countUp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/teal_700"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="150sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-21dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button123"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="DuplicateIds,DuplicateSpeakableTextCheck,TextContrastCheck,TouchTargetSizeCheck,VisualLintButtonSize,VisualLintSystemUi"
        tools:layout_editor_absoluteX="20dp"
        android:onClick="countDown" />

</androidx.constraintlayout.widget.ConstraintLayout>